                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-04-2006 fixed: Hide File Extensions option applied to formatted labels instead of just filenames.
 - 24-04-2006 fixed: Unicode string input to xbmcgui.Dialog().select"
 - 24-04-2006 fixed: Thumbnail panels didn't wrap around when going up from first item or down from last item.
 - 24-04-2006 fixed: Crash when changing GUI resolution while playing media.
 - 23-04-2006 fixed: If screensaver window is activated externally (via web or python or whatever) it wouldn't register, so would be activated again after the usual timeout.
 - 23-04-2006 fixed: Karaoke is always rendered on top of visualisations.
 - 23-04-2006 fixed: Shoutcast directory did no caching.
 - 23-04-2006 fixed: [ 1474835 ] Cannot add media source after all are deleted.
 - 23-04-2006 added: Player.HasDuration conditional visibility tag.
 - 23-04-2006 changed: "empty CURL created" logs from warning to debug level.
 - 23-04-2006 fixed: Application notification about last.fm trackchanges.
 - 23-04-2006 fixed: Seeking was enabled for media that doesn't support it (last.fm, shoutcast..)
 - 23-04-2006 fixed: Incorrect "CDDB" errormessage when unable to connect to a shoutcast station.
 - 23-04-2006 fixed: Playlist files (strm/pls) containing an url to an online playlist (asx/pls) would not play.
 - 23-04-2006 fixed: Parts of [ 1398400 ] Multiple Bugs (5): Karaoke, Audio, MP3 + CDG Playback.
 - 23-04-2006 fixed: [ 1395189 ] CDG Seeking loses sync,  [ 1450824 ] Lyrics Lose Sync on FF / RW. Stup duping bug reports already!
 - 23-04-2006 fixed: bug in samba port code for retrieving directory listing from old lanman servers. 